...
                .padding(24)
            }
            .navigationTitle("Create Your Organization")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(viewModel.state == .submitted ? "Done" : "Cancel") {
                        dismiss()
                    }
                }
            }
        }
    }
...
