...
        case about

        var title: String {
            switch self {
            case .account: return "Account"
            case .organization: return "Organization"
            case .security: return "Security"
            case .recovery: return "Recovery"
            case .about: return "About"
            }
        }
    }

...
